--- a/local.css
+++ b/local.css
@@ -17,7 +17,7 @@ body {
     border: 1px solid #a3b80b;
 }
 #lista_wrapper {
-    margin: 3rem;
+    margin: 2rem;
 }
 #lista {
     width: 100% !important;
@@ -121,7 +121,29 @@ ul.pagination {
     line-height: inherit !important;
     vertical-align: middle;
 }
-
+.counters {
+    margin: 1rem 2rem;
+    border-radius: .5em;
+    padding:1rem;
+    background: #354346;
+}
+.ct-grid {
+    stroke: none !important;
+}
+.ct-bar {
+    stroke: #a3b80b !important;
+}
+.ct-label {
+    color: white !important;
+    font-size: .5em !important;
+    text-transform: uppercase !important;
+}
+.counters span {
+    display:block;
+    text-align:center;
+    color: white;
+    padding:.5rem;
+}
 @media only screen and (max-width: 600px) {
     #lista_wrapper {
         margin: 1rem;
