--- a/local.css
+++ b/local.css
@@ -121,32 +121,31 @@ ul.pagination {
     line-height: inherit !important;
     vertical-align: middle;
 }
-.counters {
-    margin: 1rem 2rem;
-    border-radius: .5em;
-    padding:1rem;
-    background: #354346;
+.chart {
+    margin: 1rem auto;
+    border-radius: .5rem;
+    padding: 1rem;
+    height: 200px;
+    width: 50%;
 }
-.ct-grid {
-    stroke: none !important;
+#v-bargraph {
+    height: 100% !important;
+    width: 100% !important;
+    margin-bottom: 1em;
 }
-.ct-bar {
-    stroke: #a3b80b !important;
-}
-.ct-label {
-    color: white !important;
-    font-size: .5em !important;
-    text-transform: uppercase !important;
-}
-.counters span {
-    display:block;
-    text-align:center;
-    color: white;
-    padding:.5rem;
-}
+@media only screen and (max-width: 1024px) and (min-width: 600px) {
+    .chart {
+        width: 75%;
+    }
+
+  }
 @media only screen and (max-width: 600px) {
     #lista_wrapper {
         margin: 1rem;
+    }
+    .chart {
+        height: 150px;
+        width: 90%;
     }
 
   }
